--- a/themes/Acetolog/source/stylus/_var.styl
+++ b/themes/Acetolog/source/stylus/_var.styl
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 // This is the MAIN THEME COLOR.
-$theme_color = #cd4dcc;
+$theme_color = #851de0;
 
 // Light mode color set.
 
